[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Debug.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 500.0
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 530.0
margin_bottom = 40.0

[node name="FPS" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
editor/display_folded = true
margin_right = 70.0
margin_bottom = 40.0
rect_min_size = Vector2( 70, 0 )

[node name="Rect" type="NinePatchRect" parent="MarginContainer/HBoxContainer/FPS"]
margin_right = 70.0
margin_bottom = 40.0
region_rect = Rect2( 14.4444, 8.88889, 0.444443, 0 )

[node name="label" type="Label" parent="MarginContainer/HBoxContainer/FPS/Rect"]
margin_right = 30.0
margin_bottom = 40.0
text = "FPS:"
align = 2
valign = 1

[node name="value" type="Label" parent="MarginContainer/HBoxContainer/FPS/Rect"]
margin_left = 35.0
margin_right = 65.0
margin_bottom = 40.0
text = "12"
valign = 1

[node name="NumNodes" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 74.0
margin_right = 154.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 0 )

[node name="Rect" type="NinePatchRect" parent="MarginContainer/HBoxContainer/NumNodes"]
margin_right = 80.0
margin_bottom = 40.0
region_rect = Rect2( 14.4444, 8.88889, 0.444443, 0 )

[node name="label" type="Label" parent="MarginContainer/HBoxContainer/NumNodes/Rect"]
margin_right = 50.0
margin_bottom = 40.0
text = "total:"
align = 2
valign = 1

[node name="value" type="Label" parent="MarginContainer/HBoxContainer/NumNodes/Rect"]
margin_left = 55.0
margin_right = 85.0
margin_bottom = 40.0
text = "12"
valign = 1

[node name="NumTiles" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
editor/display_folded = true
margin_left = 158.0
margin_right = 248.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 0 )

[node name="Rect" type="NinePatchRect" parent="MarginContainer/HBoxContainer/NumTiles"]
margin_right = 90.0
margin_bottom = 40.0
region_rect = Rect2( 14.4444, 8.88889, 0.444443, 0 )

[node name="label" type="Label" parent="MarginContainer/HBoxContainer/NumTiles/Rect"]
margin_right = 50.0
margin_bottom = 40.0
text = "Tiles:"
align = 2
valign = 1

[node name="value" type="Label" parent="MarginContainer/HBoxContainer/NumTiles/Rect"]
margin_left = 55.0
margin_right = 85.0
margin_bottom = 40.0
text = "12"
valign = 1

[node name="NumClickables" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
editor/display_folded = true
margin_left = 252.0
margin_right = 342.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 0 )

[node name="Rect" type="NinePatchRect" parent="MarginContainer/HBoxContainer/NumClickables"]
margin_right = 90.0
margin_bottom = 40.0
region_rect = Rect2( 14.4444, 8.88889, 0.444443, 0 )

[node name="label" type="Label" parent="MarginContainer/HBoxContainer/NumClickables/Rect"]
margin_right = 50.0
margin_bottom = 40.0
text = "Clicks:"
align = 2
valign = 1

[node name="value" type="Label" parent="MarginContainer/HBoxContainer/NumClickables/Rect"]
margin_left = 55.0
margin_right = 85.0
margin_bottom = 40.0
text = "12"
valign = 1

[node name="NumEffects" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
editor/display_folded = true
margin_left = 346.0
margin_right = 436.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 0 )

[node name="Rect" type="NinePatchRect" parent="MarginContainer/HBoxContainer/NumEffects"]
margin_right = 90.0
margin_bottom = 40.0
region_rect = Rect2( 14.4444, 8.88889, 0.444443, 0 )

[node name="label" type="Label" parent="MarginContainer/HBoxContainer/NumEffects/Rect"]
margin_right = 50.0
margin_bottom = 40.0
text = "Effects:"
align = 2
valign = 1

[node name="value" type="Label" parent="MarginContainer/HBoxContainer/NumEffects/Rect"]
margin_left = 55.0
margin_right = 85.0
margin_bottom = 40.0
text = "12"
valign = 1

[node name="NumPeeps" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 440.0
margin_right = 530.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 0 )

[node name="Rect" type="NinePatchRect" parent="MarginContainer/HBoxContainer/NumPeeps"]
margin_right = 90.0
margin_bottom = 40.0
region_rect = Rect2( 14.4444, 8.88889, 0.444443, 0 )

[node name="label" type="Label" parent="MarginContainer/HBoxContainer/NumPeeps/Rect"]
margin_right = 50.0
margin_bottom = 40.0
text = "Peeps:"
align = 2
valign = 1

[node name="value" type="Label" parent="MarginContainer/HBoxContainer/NumPeeps/Rect"]
margin_left = 55.0
margin_right = 85.0
margin_bottom = 40.0
text = "12"
valign = 1
